--- a/index.html
+++ b/index.html
@@ -723,15 +723,18 @@
       h1 {
         font-size: 1.7rem;
       }
-
+body {
+        align-items: flex-start;
+      }
       .question-text {
         font-size: 1.2rem;
       }
 
-      .container {
+.container {
         padding: 16px;
         padding-top: 0;
         min-height: auto;
+        align-items: flex-start;
       }
 
       .landing-content {
