--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,7 @@ var questions = [
             ]
         },
         {
-            text: "Week 2. Your manager says: \"Pick any starter project.\" You grab:",
+            text: "Week 2. Your manager tells you to pick any starter project. You grab:",
             answers: [
                 { text: "A repetitive process that feels like it should be automated", archetype: "workflowAutomator" },
                 { text: "Something a customer specifically asked for", archetype: "fieldEngineer" },
@@ -1123,7 +1123,7 @@ var questions = [
             ]
         },
         {
-            text: "Your Ramp Hacks project won! \uD83C\uDFC6 You find a magic lamp in the prize bag:",
+            text: "Your Ramp Hacks project won! \uD83C\uDFC6 You find a magic lamp in the prize bag and wish for the ability to:",
             answers: [
                 { text: "Instantly understand what anyone needs without them explaining", archetype: "fieldEngineer" },
                 { text: "See exactly how data moves through every system in real time", archetype: "moneyArchitect" },
@@ -1152,14 +1152,14 @@ var questions = [
                 { text: "I ran experiments that meaningfully moved the needle on growth", archetype: "productHacker" }
             ]
         },
-        {
+     {
             text: "Year 2. You can give one superpower to your entire team:",
             answers: [
-                { text: "Always ask: \"How does this feel for the person using it?\"", archetype: "experienceCrafter" },
-                { text: "Always ask: \"What could go wrong that we\u2019re not thinking about?\"", archetype: "riskDetective" },
-                { text: "Always ask: \"Is there a way to automate this instead?\"", archetype: "workflowAutomator" },
-                { text: "Always ask: \"How do we make this reliable enough to never worry about?\"", archetype: "moneyArchitect" },
-                { text: "Always ask: \"Are we building what people actually need?\"", archetype: "fieldEngineer" }
+                { text: "Instantly know how something feels for the person using it", archetype: "experienceCrafter" },
+                { text: "Spot what could go wrong before it actually does", archetype: "riskDetective" },
+                { text: "Automate any repetitive task with a snap of your fingers", archetype: "workflowAutomator" },
+                { text: "Make any system reliable enough to never worry about again", archetype: "moneyArchitect" },
+                { text: "Read exactly what a customer needs without them saying a word", archetype: "fieldEngineer" }
             ]
         }
     ];
