--- a/index.html
+++ b/index.html
@@ -1095,11 +1095,11 @@ var questions = [
         {
             text: "Uh oh\u2014it\u2019s 2am and your phone buzzes. What gets you out of bed?",
             answers: [
-                { text: "\"The system health metrics are dropping across the board\"", archetype: "moneyArchitect" },
-                { text: "\"Something unusual is happening\u2014we\u2019re seeing patterns we can\u2019t explain\"", archetype: "riskDetective" },
-                { text: "\"The dev tooling is broken and nobody can ship\"", archetype: "systemsSculptor" },
-                { text: "\"A big customer is blocked and needs help before morning\"", archetype: "fieldEngineer" },
-                { text: "\"A recent change might have broken something for users\"", archetype: "productHacker" }
+                { text: "The system health metrics are dropping across the board\", archetype: "moneyArchitect" },
+                { text: "Something unusual is happening\u2014we\u2019re seeing patterns we can\u2019t explain\", archetype: "riskDetective" },
+                { text: "The dev tooling is broken and nobody can ship\", archetype: "systemsSculptor" },
+                { text: "A big customer is blocked and needs help before morning\", archetype: "fieldEngineer" },
+                { text: "A recent change might have broken something for users\", archetype: "productHacker" }
             ]
         },
         {
