--- a/index.html
+++ b/index.html
@@ -1123,7 +1123,7 @@ var questions = [
             ]
         },
         {
-            text: "Your Ramp Hacks project won! \uD83C\uDFC6 You find a magic lamp in the prize bag and wish for the ability to:",
+            text: "Your Ramp Hacks project won! \uD83C\uDFC6 In the prize bag, you find a magic lamp and wish for the ability to:",
             answers: [
                 { text: "Instantly understand what anyone needs without them explaining", archetype: "fieldEngineer" },
                 { text: "See exactly how data moves through every system in real time", archetype: "moneyArchitect" },
